Fix bug with tool proficiency label, fix layout issues with ability selector

--- a/styles/actor/ability-assignment-dialog.css
+++ b/styles/actor/ability-assignment-dialog.css
@@ -66,6 +66,7 @@
 		> fieldset {
 			flex: calc(100% / var(--score-count)) 1 1;
 			display: flex;
+			flex-direction: row;
 			flex-wrap: wrap;
 			row-gap: 0.5em;
 			padding: 0.25rem;
